--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=vfk9ei"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=vfk9ei" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=FWGmZf"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=FWGmZf" type="text/css">
 
   
   
@@ -99,7 +99,7 @@
             <div class="item features-without-image col-12">
               <div class="item-wrapper">
                 
-                <p class="mbr-text mbr-fonts-style display-7">Syalom,
+                <p class="mbr-text mbr-fonts-style display-7">Shalom,
 <br>Puji dan syukur patut kita panjatkan kepada Tuhan Yang Maha Esa yang telah memberikan berkat dan rahmatNya sehingga situs website ini dapat dibuat. Website ini dibuat dengan maksud sebagai salah satu cara untuk menjawab setiap kebutuhan informasi dengan memanfaatkan sarana teknologi informasi yang ada.
 <br>
 <br>Kami menyadari bahwa saat ini teknologi informasi yang begitu pesat, sangat diperlukan berbagai sarana prasarana yang kondusif, kebutuhan berbagai informasi siswa, guru, orangtua maupun masyarakat, sehingga kami berusaha mewujudkan hal tersebut semaksimal mungkin. Semoga dengan adanya website ini dapat membantu dan bermanfaat, terutama informasi yang berhubungan dengan pendidikan, ilmu pengetahuan dan informasi seputar sekolah kami.
@@ -110,7 +110,7 @@
 <br>
 <br>Akhir kata, Terima Kasih atas kunjungannya, salam sukses untuk kita semua.
 <br>
-<br>Syalom…
+<br>Shalom…
 <br>
 <br>Kepala Sekolah,
 <br>Ruslinto Rambu Logi, S.Pd</p>
@@ -198,7 +198,7 @@
                 </div>
             </div>
             <div class="map-wrapper col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDbnCmnHmtigIYiD8jIfeHQv7gW2ANhHD4&amp;q=https://www.google.com/maps/place/SDI+Piduwacu/@-9.4977721,119.5788977,254m/data=!3m1!1e3!4m10!1m2!2m1!1sSD+Ipres+Pidu+Wacu+Sumba+Tengah!3m6!1s0x2c4b257c16481a5b:0xd143a0ea412629ef!8m2!3d-9.4971591!4d119.5806161!15sCiBTRCBJbnByZXMgUGlkdSBXYWN1IFN1bWJhIFRlbmdhaJIBEWVsZW1lbnRhcnlfc2Nob29s4AEA!16s%2Fg%2F11h3yf7857?entry=ttu" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAtXm0x23nRCgazjDV2Kl3GTHRP411ougQ&amp;q=https://www.google.com/maps/place/SDI+Piduwacu/@-9.4977721,119.5788977,254m/data=!3m1!1e3!4m10!1m2!2m1!1sSD+Ipres+Pidu+Wacu+Sumba+Tengah!3m6!1s0x2c4b257c16481a5b:0xd143a0ea412629ef!8m2!3d-9.4971591!4d119.5806161!15sCiBTRCBJbnByZXMgUGlkdSBXYWN1IFN1bWJhIFRlbmdhaJIBEWVsZW1lbnRhcnlfc2Nob29s4AEA!16s%2Fg%2F11h3yf7857?entry=ttu" allowfullscreen=""></iframe></div>
             </div>
         </div>
     </div>
@@ -254,7 +254,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3119756" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-maker.html">Free AI Website Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3119756" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-generator.html">AI Website Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
