--- a/page6.html
+++ b/page6.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=TxYaMu"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=TxYaMu" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=pGjzSC"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=pGjzSC" type="text/css">
 
   
   
@@ -81,11 +81,11 @@
             <div class="card col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="image-wrapper">
-                        <a href="https://wa.me/62 82160114116"><span class="mbr-iconfont socicon-whatsapp socicon"></span></a>
+                        <a href="https://wa.me/6282160114116"><span class="mbr-iconfont socicon-whatsapp socicon"></span></a>
                     </div>
                     <div class="text-wrapper">
-                        <h6 class="card-title mbr-fonts-style mb-1 display-5">Whats App</h6>
-                        <p class="mbr-text mbr-fonts-style display-7"><a href="https://wa.me/62 82160114116" class="text-primary">+62 821 6011 4116</a></p>
+                        <h6 class="card-title mbr-fonts-style mb-1 display-5"><strong>Whats App</strong></h6>
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="https://wa.me/6282160114116" class="text-primary">+62 821 6011 4116</a></p>
                     </div>
                 </div>
                 <div class="card-wrapper">
@@ -101,7 +101,7 @@
                 </div>
             </div>
             <div class="map-wrapper col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBQ55g-IgRRgXrd803PTWDTb7kd6aAitNQ&amp;q=https://www.google.com/maps/place/SDI+Piduwacu/@-9.4977721,119.5788977,254m/data=!3m1!1e3!4m10!1m2!2m1!1sSD+Ipres+Pidu+Wacu+Sumba+Tengah!3m6!1s0x2c4b257c16481a5b:0xd143a0ea412629ef!8m2!3d-9.4971591!4d119.5806161!15sCiBTRCBJbnByZXMgUGlkdSBXYWN1IFN1bWJhIFRlbmdhaJIBEWVsZW1lbnRhcnlfc2Nob29s4AEA!16s%2Fg%2F11h3yf7857?entry=ttu" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDbnCmnHmtigIYiD8jIfeHQv7gW2ANhHD4&amp;q=https://www.google.com/maps/place/SDI+Piduwacu/@-9.4977721,119.5788977,254m/data=!3m1!1e3!4m10!1m2!2m1!1sSD+Ipres+Pidu+Wacu+Sumba+Tengah!3m6!1s0x2c4b257c16481a5b:0xd143a0ea412629ef!8m2!3d-9.4971591!4d119.5806161!15sCiBTRCBJbnByZXMgUGlkdSBXYWN1IFN1bWJhIFRlbmdhaJIBEWVsZW1lbnRhcnlfc2Nob29s4AEA!16s%2Fg%2F11h3yf7857?entry=ttu" allowfullscreen=""></iframe></div>
             </div>
         </div>
     </div>
@@ -157,7 +157,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3119756" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Website Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3119756" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-creator.html">Best AI Website Creator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
