create github pages

--- a/page2.html
+++ b/page2.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=s5uykO"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=s5uykO" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=iqYnLX"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=iqYnLX" type="text/css">
 
   
   
@@ -185,8 +185,7 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2025 Mobirise - All Rights Reserved
-                </p>
+                    © Copyright 2024 - Evinia Rambu Karaji - Universitas Respati Yogyakarta</p>
             </div>
         </div>
     </div>
