create github pages

--- a/page1.html
+++ b/page1.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=rFXdjw"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=rFXdjw" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=TLzvhP"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=TLzvhP" type="text/css">
 
   
   
@@ -80,10 +80,8 @@
 			<div class="col-12 col-md-12 col-lg">
 				<div class="text-wrapper align-left">
 					<h1 class="mbr-section-title mbr-fonts-style mb-4 display-2"><strong>Sejarah Sekolah</strong></h1>
-					<p class="mbr-text mbr-fonts-style mb-4 display-7">SD Inpres Pidu Wacu merupakan lembaga pendidikan formal yang diharapkan dapat menciptakan manusia yang berintelektual dan beriman kepada Tuhan Yang Maha Esa demi menciptakan kecerdasan anak bangsa.
-<br>Secara geografis SD Inpres Pidu Wacu didirikan pada tanggal 1 Oktober 1982 yang terletak di desa Daha Elu, Kecamatan Umbu Ratu Nggay Barat Kabupaten Sumba Tengah.
-<br>SD Inpres Pidu Wacu Merupakan sekolah negeri. Sekolah ini didirikan dengan tujuan supaya pelajar memiliki dasar-dasar pengetahuan, kemampuan dan keterampilan untuk melanjutkan pendidikan ke jenjang yang lebih tinggi.
-<br>SD Inpres Pidu Wacu merupakan sekolah pertama yang didirikan di desa Daha Elu, maka dari itu diharapkan mampu menciptakan pelajar yang beriman dan bertakwa kepada Tuhan yang Maha Esa dan berakhlak mulia serta dapat menjadi motivasi bagi pelajar untuk belajar hingga akhir hayat.&nbsp;&nbsp;<br></p>
+					<p class="mbr-text mbr-fonts-style mb-4 display-7">SD Inpres Pidu Wacu didirikan pada tanggal 1 Oktober 1982 di desa Daha Elu, Kecamatan Umbu Ratu Nggay Barat, Kabupaten Sumba Tengah. Sekolah ini merupakan bagian dari program Inpres (Instruksi Presiden) yang bertujuan untuk memperluas akses pendidikan dasar di daerah-daerah terpencil di Indonesia. Dengan pendanaan dari pemerintah dan berada di bawah pengelolaan Dinas Pendidikan Kabupaten Sumba Tengah, SD Inpres Pidu Wacu memberikan kesempatan kepada anak-anak di Desa Daha Elu dan sekitarnya agar mendapatkan pendidikan dasar yang layak. 
+<br><br>Selama lebih dari tiga dekade, SD Inpres Pidu Wacu telah meluluskan banyak siswa yang kemudian melanjutkan pendidikan ke jenjang lebih tinggi atau berkontribusi pada perkembangan desa mereka. Meskipun menghadapi tantangan seperti keterbatasan fasilitas dan sumber daya manusia yang terlatih, semangat gotong royong dan dukungan dari pemerintah serta masyarakat setempat membantu sekolah ini terus berupaya memberikan pendidikan terbaik. Dengan komitmen yang kuat, SD Inpres Pidu Wacu berperan penting dalam membentuk masa depan anak-anak di Kecamatan Umbu Ratu Nggay Barat.<br></p>
 					
 				</div>
 			</div>
@@ -140,7 +138,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3119756" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">Free AI Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3119756" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/no-code-website-builder.html">No Code Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
