create github pages

--- a/page6.html
+++ b/page6.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=Fm97D7"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=Fm97D7" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=bCs2wh"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=bCs2wh" type="text/css">
 
   
   
@@ -101,7 +101,7 @@
                 </div>
             </div>
             <div class="map-wrapper col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB7QWkvlxV39ZsyKvhZRjPGVqlJFvxxNkw&amp;q=https://www.google.com/maps/place/SDI+Piduwacu/@-9.4977721,119.5788977,254m/data=!3m1!1e3!4m10!1m2!2m1!1sSD+Ipres+Pidu+Wacu+Sumba+Tengah!3m6!1s0x2c4b257c16481a5b:0xd143a0ea412629ef!8m2!3d-9.4971591!4d119.5806161!15sCiBTRCBJbnByZXMgUGlkdSBXYWN1IFN1bWJhIFRlbmdhaJIBEWVsZW1lbnRhcnlfc2Nob29s4AEA!16s%2Fg%2F11h3yf7857?entry=ttu" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBQ55g-IgRRgXrd803PTWDTb7kd6aAitNQ&amp;q=https://www.google.com/maps/place/SDI+Piduwacu/@-9.4977721,119.5788977,254m/data=!3m1!1e3!4m10!1m2!2m1!1sSD+Ipres+Pidu+Wacu+Sumba+Tengah!3m6!1s0x2c4b257c16481a5b:0xd143a0ea412629ef!8m2!3d-9.4971591!4d119.5806161!15sCiBTRCBJbnByZXMgUGlkdSBXYWN1IFN1bWJhIFRlbmdhaJIBEWVsZW1lbnRhcnlfc2Nob29s4AEA!16s%2Fg%2F11h3yf7857?entry=ttu" allowfullscreen=""></iframe></div>
             </div>
         </div>
     </div>
