--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,500,600,700,400i,500i,600i,700i&display=swap"></noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=ZOrJY5"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=ZOrJY5" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=KvrQLH"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=KvrQLH" type="text/css">
 
   
   
@@ -58,10 +58,10 @@
 						<a class="nav-link link text-danger display-4" href="index.html">Beranda</a>
 					</li>
 					<li class="nav-item dropdown">
-						<a class="nav-link link dropdown-toggle show text-danger display-4" href="https://mobiri.se" aria-expanded="false" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside">Profil Sekolah</a><div class="dropdown-menu show" aria-labelledby="dropdown-372" data-bs-popper="none"><a class="dropdown-item text-danger display-4" href="page1.html">Sejarah</a><a class="dropdown-item text-danger display-4" href="page2.html">Visi &amp; Misi</a><a class="show dropdown-item text-danger display-4" href="page4.html">Fasilitas Sekolah</a><a class="show dropdown-item text-danger display-4" href="page5.html">Struktur Organisasi</a></div>
+						<a class="nav-link link dropdown-toggle text-danger display-4" href="https://mobiri.se" aria-expanded="false" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside">Profil Sekolah</a><div class="dropdown-menu" aria-labelledby="dropdown-372"><a class="dropdown-item text-danger display-4" href="page1.html">Sejarah</a><a class="dropdown-item text-danger display-4" href="page2.html">Visi &amp; Misi</a><a class="show dropdown-item text-danger display-4" href="page4.html">Fasilitas Sekolah</a><a class="show dropdown-item text-danger display-4" href="page5.html">Struktur Organisasi</a></div>
 					</li>
 					<li class="nav-item dropdown">
-						<a class="nav-link link text-danger dropdown-toggle display-4" href="page7.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Informasi<br><br></a><div class="dropdown-menu" aria-labelledby="dropdown-251"><a class="text-danger dropdown-item text-primary display-4" href="page8.html">Syarat Pendaftaran</a><a class="text-danger show dropdown-item display-4" href="page7.html">Pengumuman</a></div>
+						<a class="nav-link link text-danger dropdown-toggle display-4" href="page7.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Informasi<br></a><div class="dropdown-menu" aria-labelledby="dropdown-251"><a class="text-danger dropdown-item text-primary display-4" href="page8.html">Syarat Pendaftaran</a><a class="text-danger show dropdown-item display-4" href="page7.html">Pengumuman</a></div>
 					</li><li class="nav-item"><a class="nav-link link text-danger display-4" href="page3.html">Galeri</a></li><li class="nav-item"><a class="nav-link link text-danger display-4" href="page6.html">Kontak</a></li></ul>
 				
 				
@@ -142,7 +142,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3119756" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-generator.html">AI Website Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3119756" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
