create github pages

--- a/page5.html
+++ b/page5.html
@@ -24,7 +24,7 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,500,600,700,400i,500i,600i,700i&display=swap"></noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=1WPa6R"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=1WPa6R" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=94aJgi"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=94aJgi" type="text/css">
 
   
   
@@ -70,13 +70,24 @@
 	</nav>
 </section>
 
-<section data-bs-version="5.1" class="image03 cid-ubjd6F41AT" id="image04-x">
-    
+<section data-bs-version="5.1" class="image3 cid-uhCLzvU0b6" id="image03-2o">
+  
 
-    <div class="image-block m-auto">
-        <img src="assets/images/untitled-4.png" alt="Mobirise">
+  
+  <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(255, 255, 255);"></div>
+
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-12 col-lg-12">
+        <h4 class="mbr-description mbr-fonts-style mb-3 align-center display-2">
+          <strong>Struktur Organisasi</strong></h4>
         
+        <div class="image-wrapper">
+          <img class="w-100" src="assets/images/untitled-5.png" alt="Mobirise Website Builder">
+        </div>
+      </div>
     </div>
+  </div>
 </section>
 
 <section data-bs-version="5.1" class="share3 cid-ucccQZ2W6w" id="share3-1v">
