--- a/page7.html
+++ b/page7.html
@@ -23,7 +23,7 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,500,600,700,400i,500i,600i,700i&display=swap"></noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=zKOkQz"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=zKOkQz" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=AD3kGj"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=AD3kGj" type="text/css">
 
   
   
@@ -79,19 +79,14 @@
     <div class="row justify-content-center">
       <div class="col-md-12 mb-5 content-head">
         <h1 class="mbr-section-title mbr-fonts-style display-2"><strong>Pengumuman</strong></h1>
-        <p class="mbr-text mbr-fonts-style mt-4 display-7">
-          Intro with a picture at the bottom. Great for pro-coders for fast
-          prototyping and small customers' projects.
-        </p>
-        <div class="mbr-section-btn mt-4">
-          <a class="btn btn-primary display-7" href="https://mobiri.se">Create Free Website!</a>
-        </div>
+        <p class="mbr-text mbr-fonts-style mt-4 display-7">Tanggal 15 Juli 2024 pembukaan tahun ajaran baru 2024/2025</p>
+        
       </div>
     </div>
 
     <div class="row justify-content-center">
-      <div class="col-12 col-md-10">
-        <img src="assets/images/6.jpg" alt="Mobirise Website Builder" title="">
+      <div class="col-12 col-md-9">
+        <img src="assets/images/upacara.jpeg" alt="Mobirise Website Builder" title="">
       </div>
     </div>
   </div>
@@ -111,7 +106,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3119756" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Website Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3119756" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">Free AI Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
